Fixed issue serializing date object
